fix subheader overflow

--- a/components/src/core/drawer/drawer-subheader/drawer-subheader.component.scss
+++ b/components/src/core/drawer/drawer-subheader/drawer-subheader.component.scss
@@ -2,3 +2,7 @@
 .pxb-drawer-subheader-content-wrapper {
     width: 100%;
 }
+
+.pxb-drawer-subheader {
+    box-sizing: border-box;
+}
